[tool.poetry]
name = "acw"
version = "0.0.1"
description = ""
authors = ["bossm0n5t3r <bossm0n5t3r@gmail.com>", "Woozzang <woozzaang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
pyinstaller = "^6.4.0"
inquirer = "^3.2.4"
rich = "^13.7.1"
openai = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
