[project]
name = "acw"
version = "0.0.1"
description = ""
authors = [
    { name = "bossm0n5t3r", email = "bossm0n5t3r@gmail.com" },
    { name = "Woozzang", email = "woozzaang@gmail.com" },
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyinstaller>=6.13.0",
    "inquirer>=3.4.0",
    "rich>=14.0.0",
    "openai>=1.75.0",
    "ollama>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
